syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.ids.argus.store.transport.grpc.job";
option objc_class_prefix = "ArgusStoreJob";
import "google/protobuf/empty.proto";
service JobStoreService {
  rpc create(CreateRequest) returns (CreateResponse);
  rpc read(ReadRequest) returns (ReadResponse);
}
message CreateRequest {
  string module = 1;
  string module_version = 2;
  string params = 3;
}
message CreateResponse {
  int32 id = 1;
}

message ReadRequest {

}
message ReadResponse {

}